fux bugs (auth, user, post and menu)
