# internal/docs/swagger.yaml
@@ -203,8 +203,6 @@ definitions:
     properties:
       id:
         type: integer
-      password:
-        type: string
       refresh:
         type: string
       role:
@@ -1288,6 +1286,10 @@ paths:
           description: Forbidden
           schema:
             $ref: '#/definitions/errors.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/errors.Error'
         "500":
           description: Internal Server Error
           schema:
@@ -1318,12 +1320,8 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/errors.Error'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/errors.Error'
-        "403":
-          description: Forbidden
+        "404":
+          description: Not Found
           schema:
             $ref: '#/definitions/errors.Error'
         "500":
@@ -1358,12 +1356,8 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/errors.Error'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/errors.Error'
-        "403":
-          description: Forbidden
+        "404":
+          description: Not Found
           schema:
             $ref: '#/definitions/errors.Error'
         "500":
