# internal/entity/user.go
@@ -60,7 +60,7 @@ type DeleteUserResponse struct {
 type GetUserResponse struct {
 	Id       int     `json:"id"`
 	Username string  `json:"username"`
-	Password string  `json:"password"`
+	Password string  `json:"-"`
 	Role     string  `json:"role"`
 	Status   bool    `json:"status"`
 	Refresh  *string `json:"refresh"`
